--- a/package.json
+++ b/package.json
@@ -8,19 +8,21 @@
   "private": true,
   "scripts": {
     "dev": "NODE_ENV=development npx webpack-dev-server --open --hot",
-    "shell": "rm build/main.js & cp ./src/gas/app.js ./build/app.js",
+    "shell": "rm build/app.js & cp ./src/gas/app.js ./build/app.js",
     "build": "NODE_ENV=development npx webpack && npm run shell && clasp push --force && clasp open",
-    "deploy": "NODE_ENV=production npx webpack && rm build/main.js && clasp push --force && clasp open"
+    "deploy": "NODE_ENV=production npx webpack && npm run shell && clasp push --force && clasp open"
   },
   "dependencies": {
+    "@types/google-apps-script": "1.0.12",
     "@material-ui/core": "4.9.10",
-    "@types/google-apps-script": "^1.0.12",
     "@types/react": "16.9.34",
     "@types/react-dom": "16.9.6",
+    "@types/react-router-dom": "5.1.4",
     "html-webpack-inline-source-plugin": "1.0.0-beta.2",
     "html-webpack-plugin": "4.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-router-dom": "5.1.2",
     "ts-loader": "6.2.2",
     "typescript": "3.8.3",
     "webpack": "4.42.1",
