Update package.json Each dependencies ver fixed.
package.jsonのdependenciesのバージョンを可変にした所、webpack dev server で変更が反映されなくなった為、一旦元のバージョンに戻す

--- a/package.json
+++ b/package.json
@@ -14,20 +14,20 @@
     "create": "clasp create --rootDir ./build"
   },
   "dependencies": {
-    "@types/google-apps-script": "*",
-    "@material-ui/core": "*",
-    "@types/react": "*",
-    "@types/react-dom": "*",
-    "@types/react-router-dom": "*",
+    "@material-ui/core": "4.9.10",
+    "@types/google-apps-script": "1.0.12",
+    "@types/react": "16.9.34",
+    "@types/react-dom": "16.9.6",
+    "@types/react-router-dom": "5.1.4",
     "html-webpack-inline-source-plugin": "1.0.0-beta.2",
-    "html-webpack-plugin": "*",
-    "react": "*",
-    "react-dom": "*",
-    "react-router-dom": "*",
-    "ts-loader": "*",
-    "typescript": "*",
-    "webpack": "*",
-    "webpack-cli": "*",
-    "webpack-dev-server": "*"
+    "html-webpack-plugin": "4.2.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-router-dom": "5.1.2",
+    "ts-loader": "6.2.2",
+    "typescript": "3.8.3",
+    "webpack": "4.42.1",
+    "webpack-cli": "3.3.11",
+    "webpack-dev-server": "3.10.3"
   }
 }
