--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "@material-ui/core": "4.9.10",
+        "@material-ui/lab": "^4.0.0-alpha.56",
         "@types/google-apps-script": "1.0.14",
         "@types/react": "16.9.34",
         "@types/react-dom": "16.9.6",
