--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "web-app-template",
-    "version": "0.1.1",
+    "version": "1.0.0",
     "description": "template of web application",
     "main": "./src/App.tsx",
     "author": "ym.u.ichiro@gmail.com",
@@ -8,23 +8,26 @@
     "private": true,
     "scripts": {
         "dev": "NODE_ENV=development npx webpack-dev-server --hot",
+        "devDeploy": "NODE_ENV=development npx webpack && rm build/app.js",
         "deploy": "NODE_ENV=production npx webpack && rm build/app.js",
+        "devDeploy&push": "NODE_ENV=development npx webpack && rm build/app.js && clasp push --force && clasp open",
         "deploy&push": "NODE_ENV=production npx webpack && rm build/app.js && clasp push --force && clasp open",
         "create": "clasp create --rootDir ./build"
     },
     "dependencies": {
         "@material-ui/core": "4.9.10",
-        "@material-ui/lab": "^4.0.0-alpha.56",
         "@types/google-apps-script": "1.0.14",
         "@types/react": "16.9.34",
         "@types/react-dom": "16.9.6",
         "@types/react-router-dom": "5.1.4",
+        "@types/recharts": "1.8.14",
         "html-webpack-inline-source-plugin": "1.0.0-beta.2",
         "html-webpack-plugin": "4.2.0",
         "react": "16.13.1",
         "react-dom": "16.13.1",
         "react-hook-form": "6.3.0",
         "react-router-dom": "5.1.2",
+        "recharts": "1.8.5",
         "ts-loader": "6.2.2",
         "typescript": "3.8.3",
         "webpack": "4.42.1",
