--- a/package.json
+++ b/package.json
@@ -21,8 +21,6 @@
 		"@types/react-dom": "16.9.6",
 		"@types/react-router-dom": "5.1.4",
 		"@types/recharts": "1.8.14",
-		"gulp": "4.0.2",
-		"gulp-replace": "1.0.0",
 		"html-webpack-inline-source-plugin": "1.0.0-beta.2",
 		"html-webpack-plugin": "4.2.0",
 		"react": "16.13.1",
@@ -30,10 +28,10 @@
 		"react-hook-form": "6.3.0",
 		"react-router-dom": "5.1.2",
 		"recharts": "1.8.5",
-		"ts-loader": "^8.0.2",
+		"ts-loader": "8.0.2",
 		"typescript": "3.8.3",
-		"webpack": "4.42.1",
-		"webpack-cli": "3.3.11",
-		"webpack-dev-server": "3.10.3"
+		"webpack": "4.44.1",
+		"webpack-cli": "3.3.12",
+		"webpack-dev-server": "3.11.0"
 	}
 }
